Bug 1576343 - fix l10n.setAttributes use from inside DOMContentLoaded listeners when the proto is cached, r=smaug,zbraniecki a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D43818